--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@types/hammerjs": "^2.0.41",
+    "@types/ramda": "^0.29.3",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
-    "hammerjs": "^2.0.8"
+    "hammerjs": "^2.0.8",
+    "ramda": "^0.29.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
