--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint-staged": "^13.3.0",
     "prettier": "^2.8.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.2"
   }
 }
