--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/eslint-parser": "^7.21.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
+    "@vitest/ui": "^0.34.3",
     "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
