feat: changes fonts and minor impls functionality

--- a/package.json
+++ b/package.json
@@ -35,21 +35,28 @@
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "hammerjs": "^2.0.8",
+    "preact": "^10.17.1",
     "ramda": "^0.29.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@preact/preset-vite": "^2.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "@vitest/ui": "^0.34.3",
     "c8": "^7.12.0",
     "commitizen": "^4.2.5",
+    "css-loader": "^6.8.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint": "^8.48.0",
+    "eslint-plugin-compat": "^4.2.0",
+    "eslint-plugin-preact": "^0.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.3.0",
     "prettier": "^2.8.0",
+    "style-loader": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.2"
